[gd_scene load_steps=20 format=3 uid="uid://bglrg2vgdl6e"]

[ext_resource type="Texture2D" uid="uid://m62guhsucyct" path="res://assets/sprites/interior/elevator/body.png" id="1_8o2wm"]
[ext_resource type="Script" uid="uid://cxj0rpmqm1w6t" path="res://scripts/elevator.gd" id="1_gisge"]
[ext_resource type="AudioStream" uid="uid://bas6cde8rrfal" path="res://assets/audio/elevator.mp3" id="2_gisge"]
[ext_resource type="PackedScene" uid="uid://bbh3286pn2faw" path="res://scenes/interactable.tscn" id="3_jmdsd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2fcxx"]
atlas = ExtResource("1_8o2wm")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4pep"]
atlas = ExtResource("1_8o2wm")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lldhi"]
atlas = ExtResource("1_8o2wm")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkj2p"]
atlas = ExtResource("1_8o2wm")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qricf"]
atlas = ExtResource("1_8o2wm")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja3hn"]
atlas = ExtResource("1_8o2wm")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyl0v"]
atlas = ExtResource("1_8o2wm")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lbij"]
atlas = ExtResource("1_8o2wm")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmdsd"]
atlas = ExtResource("1_8o2wm")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gisge"]
atlas = ExtResource("1_8o2wm")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr5mj"]
atlas = ExtResource("1_8o2wm")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xslfi"]
atlas = ExtResource("1_8o2wm")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8m3u"]
atlas = ExtResource("1_8o2wm")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtj8h"]
atlas = ExtResource("1_8o2wm")
region = Rect2(192, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_2fcxx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fcxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4pep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lldhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkj2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qricf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja3hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyl0v")
}],
"loop": false,
"name": &"close",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lbij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmdsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gisge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr5mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xslfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8m3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtj8h")
}],
"loop": false,
"name": &"open",
"speed": 2.0
}]

[node name="Elevator" type="Area2D"]
script = ExtResource("1_gisge")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_gisge")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2fcxx")
animation = &"close"
frame = 6
frame_progress = 1.0

[node name="InteractableObject" parent="." instance=ExtResource("3_jmdsd")]
position = Vector2(-21, -28)
scale = Vector2(0.8731885, 1.073056)
priority = 3
dialogue_id = "elevator"
portrait_id = "player_default"
hint_text = "openit??"

[node name="CloseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
